--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -6,11 +8,20 @@
 }
 
 body {
-  background-color: #263238;
+  background-color: #11011e;
+  font-family: "Roboto", sans-serif;
 }
 
 ul {
   list-style: none;
+}
+
+p {
+  font-size: 1rem;
+}
+
+.span-title {
+  color: rgba(15, 174, 150, 1);
 }
 
 .coinlist-image {
@@ -27,7 +38,7 @@ ul {
 }
 
 .coin-data-category {
-  font-size: 10px;
+  font-size: 12px;
 }
 
 .delete-icon {
@@ -38,4 +49,25 @@ ul {
 
 .coin:hover .delete-icon {
   display: block;
+}
+
+.custom-btn.btn-primary {
+  background-color: rgba(15, 174, 150, 1) !important;
+  border-color: rgba(15, 174, 150, 1) !important;
+  box-shadow: none !important;
+}
+
+.custom-btn.btn-primary:hover {
+  background-color: rgba(15, 174, 150, 1) !important;
+  border-color: rgba(15, 174, 150, 1) !important;
+  box-shadow: none !important;
+}
+
+.custom-dropdown-item {
+  color: #11011e;
+}
+
+.custom-dropdown-item:hover {
+  background-color: rgba(15, 174, 150, 1);
+  color: #fff;
 }
